io.intellij/src/test/kotlin/sk.infinit.testmon/testData/test_file_underline.py

def test_a():
    <error descr="AssertionError: assert (1 + 2) == 4">assert 1 + 2 == 4</error>